--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "discord.js": "^11.4.2",
     "dotenv": "^6.2.0",
     "lowdb": "^1.0.0",
-    "mongodb": "latest",
+    "mongodb": "^3.1.13",
     "request": "^2.88.0"
   }
 }
