--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "Unicorn",
   "license": "ISC",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.2",
     "discord.js": "^11.4.2",
     "dotenv": "^6.2.0",
+    "left-pad": "^1.3.0",
     "lowdb": "^1.0.0",
     "mongodb": "^3.1.13",
     "request": "^2.88.0"
